# minimal-cernsso

./: README.md  pyproject.toml
minimal_cernsso/: __init__.py
tests/: test_minimal_cernsso.py
