[tool.poetry]
name = "minimal-cernsso"
version = "0.0.2"
description = "Minimal implementation of getting a CERN SSO cookie"
authors = ["Thomas Klijnsma <tklijnsm@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6 ||  ^3.7"

requests = "^2"
six = "^1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cernsso-get-cookies = "minimal_cernsso:cli_get_cookies"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503,E501"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88